# snowcat-esp32-controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
kicad/esp32-circuit/: esp32-circuit.kicad_pcb  esp32-circuit.kicad_pro  esp32-circuit.kicad_sch
main/: CMakeLists.txt  arduino_main.cpp  utils.cpp  utils.h
main/accel/: accel.cpp  accel.h  instant.cpp  instant.h  linear.cpp  linear.h  partway.cpp  partway.h
main/controls/: controlscheme.cpp  controlscheme.h  racecar.cpp  racecar.h  singlestick.cpp  singlestick.h  stickdata.cpp  stickdata.h  tank.cpp  tank.h  twinstick.cpp  twinstick.h
main/esc/: ESC.cpp  ESC.h  scaler.cpp  scaler.h
